update chapters related to ticketsystem email account

--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -57,125 +57,11 @@ Welche Berechtigungen eine Person mit *Admin*-Zugang Personen mit *Backend*-Zuga
 [#600]
 == Grundeinstellungen vornehmen
 
-Bevor du das Ticketsystem nutzt, musst du im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* den E-Mail-Abruf einrichten, damit deine E-Mails automatisch in Tickets umgewandelt werden. Außerdem musst du die für dein Ticketsystem vorgesehenen Rollen, Typen, Status, Statusgruppen, Themen und Tags erstellen. Diese Einstellungen sind in den folgenden Unterkapiteln beschrieben.
+Bevor du das Ticketsystem nutzen kannst, musst du einige Grundeinstellungen in deinem System vornehmen:
 
-[#2100]
-=== E-Mail-Konto einrichten
+* Erstelle die für dein Ticketsystem vorgesehenen <<#700, Rollen>>, <<#800, Typen>>, <<#900, Status>>, <<#1000, Statusgruppen>>, <<#1100, Themen>> und <<#tags-erstellen-tickets, Tags>>.
 
-Damit E-Mails automatisch in Tickets umgewandelt werden, muss der E-Mail-Abruf eingerichtet werden. Die E-Mail-Adressen, von denen E-Mails abgerufen werden sollen, gibst du im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein. plentymarkets ruft dann regelmäßig neue E-Mails deiner Konten ab und wandelt diese in Tickets um. Die ursprünglichen E-Mails können entweder automatisch gelöscht oder in einen anderen E-Mail-Ordner verschoben werden.
-
-Gehe wie im Folgenden beschrieben vor, um das E-Mail-Konto für dein Ticketsystem einzurichten.
-
-Du kannst bis zu zwanzig E-Mail-Konten speichern, über die du E-Mails deiner Kund:innen direkt ins Ticketsystem überführst. plentymarkets empfiehlt für die E-Mail-Kommunikation im Ticketsystem eigene E-Mail-Adressen zu erstellen, die du ausschließlich für Tickets nutzt und die bereits anhand des Namens als solche zu erkennen sind.
-
-[.instruction]
-E-Mail-Konto einrichten:
-
-. Öffne das Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten*.
-. Klicke auf *Neue Konfiguration* (icon:plus-square[role="green"]).
-. Klappe den Bereich *E-Mail* auf (icon:angle-down[]).
-. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-set-up-email-account>>. +
-→ *_Hinweis:_* Bei den Einstellungen in den Bereichen *Konto*, *Abruf* und *Versand* handelt es sich um Pflichteinstellungen.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[IMPORTANT]
-.Testmodus beachten
-====
-Nachdem du alle Tests durchgeführt hast, musst du den Testmodus im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* deaktivieren. Ansonsten werden Tickets nur an die im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* gespeicherte E-Mail-Adresse versendet.
-====
-
-[[table-set-up-email-account]]
-.E-Mail-Konto einrichten
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *E-Mail-Abruf testen*
-|Testet die Funktion des E-Mail-Abrufs. Eine Meldung erfolgt, ob der Test erfolgreich war. Danach geht eine E-Mail mit dem Datum und der Uhrzeit des Tests ein.
-
-| *E-Mail-Versand testen*
-|Testet die Funktion des E-Mail-Versands. Eine Meldung erfolgt, ob der Test erfolgreich war. +
-*_Wichtig:_* Bei nicht erfolgreichem Test sind meist falsche Zugangsdaten oder ein falsches Kennwort die Ursache. Prüfe die Parameter im Fehlerfall.
-
-2+^| *Konto* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Die Einstellung in diesem Bereich ist eine Pflichteinstellung.)
-
-| *E-Mail*
-|Gib die E-Mail-Adresse ein, die für das Ticketsystem verwendet werden soll. Das ist ein Pflichtfeld.
-
-2+^| *Abruf* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.) +
-*_Hinweis:_* Wenn du Office 365 Exchange nutzt, beachte den <<#hinweis-office-365-exchange, Hinweis>> unterhalb dieser Tabelle.
-
-| *Aktiv*
-|Aktiviere die Option, wenn das Konto und damit der Abruf aktiv sein soll. +
-Wenn das Konto nicht aktiv sein soll, deaktiviere die Option und speichere die Einstellung. Das Konto bleibt verfügbar und du kannst es jederzeit wieder aktivieren.
-
-| *Benutzer*
-|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
-
-| *Passwort*
-|Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse eingeben.
-
-| *Verfahren*
-|Wähle das Verfahren. Empfohlenes Verfahren: IMAP. +
-*IMAP* = Die E-Mails werden auf dem Server des Providers verwaltet und stehen mehreren Geräten wie z.B. Computer, Tablet oder Smartphone zur Verfügung. Die E-Mails werden auf den Geräten synchronisiert; der Stand ist überall identisch. +
-*POP* = E-Mail-Verbindungsprotokoll, das die Abholung von E-Mails von einem Server regelt. Zwar ist keine ständige Verbindung zum Server nötig, dennoch kann es besonders bei der Arbeit mit mehreren Geräten zu Datenfehlern kommen. Bei Nutzung des POP-Verfahrens werden alle Nachrichten vom Server komplett oder als Kopie auf das Gerät heruntergeladen. Diese können dort lokal gelesen, beantwortet oder gelöscht werden. Änderungen werden weder auf den anderen verwendeten Geräte noch auf dem Server gespeichert. Eine Synchronisierung findet also _nicht_ statt.
-
-| *Port*
-|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage andernfalls den korrekten Port beim Provider. Beachte die Informationen zur *Verschlüsselung*.
-
-| *Verschlüsselung*
-|Wähle *SSL*, *TLS* (Standardeinstellung) oder *keine Verschlüsselung*. +
-*_Wichtig:_* Verwende für plentymarkets E-Mail-Konten mit dem Typ *IMAP* die Einstellung *TLS* mit Port *143* oder die Einstellung *keine Verschlüsselung* mit Port *143*. +
-*TLS-Verschlüsselung* = Bei Host auf eigener Domain (z.B. mail.domain.tld) kann über Port *143* _nicht_ *TLS* als Verschlüsselungsmethode verwendet werden, sondern die Einstellung *keine Verschlüsselung*. Bei Host auf plentymarkets (z.B. mail.plentymarkets.com) kann Port *143* in Verbindung mit *TLS* genutzt werden.
-
-| *Host*
-|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
-
-| *Typ/Status neues Ticket*
-|Wähle den Typ und Status für neue Tickets aus den Dropdown-Listen. Wenn ein neues Ticket mit diesen Parametern erstellt wird, erfolgt der automatische E-Mail-Versand.
-
-2+^| *Versand* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.)
-
-| *Name Sender*
-|Gib deinen eigenen Namen oder den Namen deiner Firma/deines Webshops ein. Dieser Name wird der Person, die die E-Mail erhalten soll, angezeigt.
-
-| *Antwort an*
-|Gib die E-Mail-Adresse ein, an die die Antwort gesendet werden soll.
-
-| *Benutzer*
-|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
-
-| *Passwort*
-|Gib das Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse ein.
-
-| *Port*
-|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage ansonsten den korrekten Port bei deinem Provider.
-
-| *Verschlüsselung*
-|Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.
-
-| *Host*
-|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
-
-2+^| *Aktionen*
-
-| *Aktion*
-|Mit *Verschieben* werden die E-Mails in einen bestimmten Ordner eingeordnet, nachdem das Ticket erstellt wurde. Damit können die E-Mails archiviert werden. +
-Wähle *Löschen*, wenn die E-Mails _nicht_ gespeichert werden sollen. Die E-Mails werden dann nach Eingang und Zuordnung im Ticketsystem gelöscht.
-
-| *Verschieben nach*
-|Diese Option ist nur sichtbar, wenn die Aktion *Verschieben* gewählt wurde. Wähle den Ordner, in den die E-Mails verschoben werden sollen. +
-*_Wichtig:_* Die Wahl eines Ordners ist zwingend. Wenn du keinen Ordner wählst, werden die E-Mails _nicht_ verschoben.
-|====
-
-[#hinweis-office-365-exchange]
-[.collapseBox]
-.Office 365 Exchange mit Basic Auth
---
-Wenn du Office 365 Exchange in Verbindung mit Basic Auth nutzt, ist es nicht mehr möglich, den E-Mail-Abruf bzw. den E-Mail-Import zu starten. Die Standardauthentifizierung (Basic Auth) wurde von Exchange Online für link:https://docs.microsoft.com/de-de/lifecycle/announcements/exchange-online-basic-auth-deprecated[veraltet^] erklärt. +
-Der E-Mail-Versand ist hiervon _nicht_ betroffen.
-Als Workaround kannst du ein neues Postfach bei einem anderen Anbieter einrichten und E-Mails dorthin weiterleiten.
---
+* Richte dein <<#2100, E-Mail-Konto>> im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein, damit deine E-Mails automatisch in Tickets umgewandelt werden. 
 
 [#650]
 === Rechte für Backend-Benutzer:innen für Rollen, Status und Typen vergeben
@@ -317,6 +203,124 @@ Thema hinzufügen:
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 Du bearbeitest ein Thema, indem du in das Textfeld klickst. Ein Klick auf *Löschen* (icon:minus-square[role="red"]) löscht die Zeile nach Bestätigung.
+
+[#2100]
+=== E-Mail-Konto einrichten
+
+Damit E-Mails automatisch in Tickets umgewandelt werden, muss der E-Mail-Abruf eingerichtet werden. Die E-Mail-Adressen, von denen E-Mails abgerufen werden sollen, gibst du im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein. plentymarkets ruft dann regelmäßig neue E-Mails deiner Konten ab und wandelt diese in Tickets um. Die ursprünglichen E-Mails können entweder automatisch gelöscht oder in einen anderen E-Mail-Ordner verschoben werden.
+
+Gehe wie im Folgenden beschrieben vor, um das E-Mail-Konto für dein Ticketsystem einzurichten.
+
+Du kannst bis zu zwanzig E-Mail-Konten speichern, über die du E-Mails deiner Kund:innen direkt ins Ticketsystem überführst. plentymarkets empfiehlt für die E-Mail-Kommunikation im Ticketsystem eigene E-Mail-Adressen zu erstellen, die du ausschließlich für Tickets nutzt und die bereits anhand des Namens als solche zu erkennen sind.
+
+[.instruction]
+E-Mail-Konto einrichten:
+
+. Öffne das Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten*.
+. Klicke auf *Neue Konfiguration* (icon:plus-square[role="green"]).
+. Klappe den Bereich *E-Mail* auf (icon:angle-down[]).
+. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-set-up-email-account>>. +
+→ *_Hinweis:_* Bei den Einstellungen in den Bereichen *Konto*, *Abruf* und *Versand* handelt es sich um Pflichteinstellungen.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+[IMPORTANT]
+.Testmodus beachten
+====
+Nachdem du alle Tests durchgeführt hast, musst du den Testmodus im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* deaktivieren. Ansonsten werden Tickets nur an die im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* gespeicherte E-Mail-Adresse versendet.
+====
+
+[[table-set-up-email-account]]
+.E-Mail-Konto einrichten
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *E-Mail-Abruf testen*
+|Testet die Funktion des E-Mail-Abrufs. Eine Meldung erfolgt, ob der Test erfolgreich war. Danach geht eine E-Mail mit dem Datum und der Uhrzeit des Tests ein.
+
+| *E-Mail-Versand testen*
+|Testet die Funktion des E-Mail-Versands. Eine Meldung erfolgt, ob der Test erfolgreich war. +
+*_Wichtig:_* Bei nicht erfolgreichem Test sind meist falsche Zugangsdaten oder ein falsches Kennwort die Ursache. Prüfe die Parameter im Fehlerfall.
+
+2+^| *Konto* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Die Einstellung in diesem Bereich ist eine Pflichteinstellung.)
+
+| *E-Mail*
+|Gib die E-Mail-Adresse ein, die für das Ticketsystem verwendet werden soll. Das ist ein Pflichtfeld.
+
+2+^| *Abruf* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.) +
+*_Hinweis:_* Wenn du Office 365 Exchange nutzt, beachte den <<#hinweis-office-365-exchange, Hinweis>> unterhalb dieser Tabelle.
+
+| *Aktiv*
+|Aktiviere die Option, wenn das Konto und damit der Abruf aktiv sein soll. +
+Wenn das Konto nicht aktiv sein soll, deaktiviere die Option und speichere die Einstellung. Das Konto bleibt verfügbar und du kannst es jederzeit wieder aktivieren.
+
+| *Benutzer*
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
+
+| *Passwort*
+|Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse eingeben.
+
+| *Verfahren*
+|Wähle das Verfahren. Empfohlenes Verfahren: IMAP. +
+*IMAP* = Die E-Mails werden auf dem Server des Providers verwaltet und stehen mehreren Geräten wie z.B. Computer, Tablet oder Smartphone zur Verfügung. Die E-Mails werden auf den Geräten synchronisiert; der Stand ist überall identisch. +
+*POP* = E-Mail-Verbindungsprotokoll, das die Abholung von E-Mails von einem Server regelt. Zwar ist keine ständige Verbindung zum Server nötig, dennoch kann es besonders bei der Arbeit mit mehreren Geräten zu Datenfehlern kommen. Bei Nutzung des POP-Verfahrens werden alle Nachrichten vom Server komplett oder als Kopie auf das Gerät heruntergeladen. Diese können dort lokal gelesen, beantwortet oder gelöscht werden. Änderungen werden weder auf den anderen verwendeten Geräte noch auf dem Server gespeichert. Eine Synchronisierung findet also _nicht_ statt.
+
+| *Port*
+|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage andernfalls den korrekten Port beim Provider. Beachte die Informationen zur *Verschlüsselung*.
+
+| *Verschlüsselung*
+|Wähle *SSL*, *TLS* (Standardeinstellung) oder *keine Verschlüsselung*. +
+*_Wichtig:_* Verwende für plentymarkets E-Mail-Konten mit dem Typ *IMAP* die Einstellung *TLS* mit Port *143* oder die Einstellung *keine Verschlüsselung* mit Port *143*. +
+*TLS-Verschlüsselung* = Bei Host auf eigener Domain (z.B. mail.domain.tld) kann über Port *143* _nicht_ *TLS* als Verschlüsselungsmethode verwendet werden, sondern die Einstellung *keine Verschlüsselung*. Bei Host auf plentymarkets (z.B. mail.plentymarkets.com) kann Port *143* in Verbindung mit *TLS* genutzt werden.
+
+| *Host*
+|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
+
+| *Typ/Status neues Ticket*
+|Wähle den Typ und Status für neue Tickets aus den Dropdown-Listen. Wenn ein neues Ticket mit diesen Parametern erstellt wird, erfolgt der automatische E-Mail-Versand.
+
+2+^| *Versand* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.)
+
+| *Name Sender*
+|Gib deinen eigenen Namen oder den Namen deiner Firma/deines Webshops ein. Dieser Name wird der Person, die die E-Mail erhalten soll, angezeigt.
+
+| *Antwort an*
+|Gib die E-Mail-Adresse ein, an die die Antwort gesendet werden soll.
+
+| *Benutzer*
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
+
+| *Passwort*
+|Gib das Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse ein.
+
+| *Port*
+|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage ansonsten den korrekten Port bei deinem Provider.
+
+| *Verschlüsselung*
+|Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.
+
+| *Host*
+|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
+
+2+^| *Aktionen*
+
+| *Aktion*
+|Mit *Verschieben* werden die E-Mails in einen bestimmten Ordner eingeordnet, nachdem das Ticket erstellt wurde. Damit können die E-Mails archiviert werden. +
+Wähle *Löschen*, wenn die E-Mails _nicht_ gespeichert werden sollen. Die E-Mails werden dann nach Eingang und Zuordnung im Ticketsystem gelöscht.
+
+| *Verschieben nach*
+|Diese Option ist nur sichtbar, wenn die Aktion *Verschieben* gewählt wurde. Wähle den Ordner, in den die E-Mails verschoben werden sollen. +
+*_Wichtig:_* Die Wahl eines Ordners ist zwingend. Wenn du keinen Ordner wählst, werden die E-Mails _nicht_ verschoben.
+|====
+
+[#hinweis-office-365-exchange]
+[.collapseBox]
+.Office 365 Exchange mit Basic Auth
+--
+Wenn du Office 365 Exchange in Verbindung mit Basic Auth nutzt, ist es nicht mehr möglich, den E-Mail-Abruf bzw. den E-Mail-Import zu starten. Die Standardauthentifizierung (Basic Auth) wurde von Exchange Online für link:https://docs.microsoft.com/de-de/lifecycle/announcements/exchange-online-basic-auth-deprecated[veraltet^] erklärt. +
+Der E-Mail-Versand ist hiervon _nicht_ betroffen.
+Als Workaround kannst du ein neues Postfach bei einem anderen Anbieter einrichten und E-Mails dorthin weiterleiten.
+--
 
 [#tags-erstellen-tickets]
 === Tags für Tickets erstellen
