--- a/docs/de-de/modules/changelog/pages/2022-08-24.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-08-24.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 18. August 2022
 :endWeekDate: 24. August 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/fix-variable-itemasin-gibt-keinen-wert-aus-fix-variable-itemasin-does-not-return-value/692243
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -57,6 +57,18 @@ Es werden nur vorhandene Etiketten gedruckt/gespeichert. Existieren keine Etiket
 '''
 
 [discrete]
+== Geändert
+
+Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+[discrete]
+=== Plugins
+
+* Wenn du ein Plugin-Set kopierst, kannst du das ursprüngliche Plugin-Set nicht mehr löschen bis der Kopiervorgang abgeschlossen ist. Durch diese Änderung werden mögliche Probleme beim Kopiervorgang verhindert.
+
+'''
+
+[discrete]
 == Behoben
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
@@ -66,6 +78,27 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 * Aufträge können nicht mehr ohne die Berechtigung *Aufträge » Aktualisieren* kopiert werden.
 * In der Statistik der Retourengründe wurde die Versandkostenposition bei *Zurückgesendeten Artikel* in der Daten-Tabelle mit einberechnet diese werden nun korrekt ausgeschlossen.
+* In der Abonnement-UI werden die Felder *Währung* und *Versandkosten* nun richtig gespeichert.
+
+[discrete]
+=== CRM
+
+* Beim Verwenden der Variable *URL zum Variantenbild* (`orderItem.formattedImageUrl`) im EmailBuilder wurde nur das Bild der ersten Variante in der E-Mail ausgegeben. Dieses Verhalten wurde behoben. Ab sofort werden die Bilder aller enthaltenen Varianten in der E-Mail ausgegeben.
+
+[discrete]
+=== Dokumente
+
+* Die Auswahl für den Filter der Zahlungsarten in der Fulfillment-UI war auf Zahlungsarten begrenzt, die als *Aktiv im Backend* galten, nicht wie an anderen Stellen wo Zahlungsarten in der Auswahl angezeigt werden die *Suchbar im Backend* sind. Dies wurde angeglichen.
+
+[discrete]
+=== Ereignisaktionen
+
+* Bei Verwendung des Filters *Auftragslager* konnte es bei der Einstellung *Mehrere Lager pro Auftrag* dazu kommen, dass dieser fälschlicherweise für Aufträge akzeptiert wurde, obwohl diese nur ein Lager haben. Dieses Verhalten konnte nur in einer Kombination der Lagereinstellung (*Zuordnung des Lager* mit der Einstellung *a) pro Auftrag kann ein Lager zugeordnet werden*) und Aufträgen mit Lieferaufträgen auftreten. Dies wurde behoben.
+
+[discrete]
+=== Fulfillment
+
+* Bei der Versandanmeldung über UPS an amerikanische Adressen in den USA kam es zu einer Fehlermeldung. Dies lag an der Adressvalidierung bezüglich der Reihenfolge von Hausnummer und Straßenname. Dieses Verhalten wurde behoben. Die Versandanmeldung über UPS in die USA funktioniert nun wieder wie gewohnt.
 
 [discrete]
 === Prozesse
@@ -85,7 +118,12 @@ early::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== plentyBI
 
+* Ab sofort kannst du leichter einsehen, welche Kennzahlen in welchen Dashboard-Ansichten verwendet werden.
++
+Öffne dazu das Menü *Einrichtung » plentyBI » Kennzahlen*. Klicke auf eine bereits angelegte Kennzahl. In der Detailansicht der Kennzahl steht nun der Bereich *Einsehen* zur Verfügung. Klappe den Bereich auf und klicke auf *Verwendung einsehen*. Danach wird eine Liste mit Links zu Dashboard-Ansichten angezeigt, in denen die Kennzahl genutzt und angezeigt wird.
 
 '''
 
@@ -94,7 +132,15 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== Artikel
 
+* In der neuen Artikel-UI wird beim Filtern nach Lieferanten nun an erster Stelle der Firmenname angezeigt und anschließend der Nach- und Vorname des Kontakts. Die Sortierung innerhalb des Filters erfolgt alphabetisch.
+
+[discrete]
+=== Payment
+
+* Wenn du im alten Dashboard das Element *Zahlungen* aktiviert hattest, wurdest du z.B. beim Klick auf die Anzahl der nicht zugeordneten Zahlungen oder der Zahlungen am aktuellen Tag zum alten Menü *Aufträge » Zahlungsverkehr (veraltet)* weitergeleitet. Dies wurde geändert. Ab sofort wirst du auf die neue UI im Menü *Aufträge » Zahlungsverkehr* weitergeleitet.
 
 '''
 
@@ -103,7 +149,28 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== Artikel
 
+* Das Speichern der Bildverknüpfung für Varianten über die Neue Artikel-UI ist jetzt wieder möglich.
+
+[discrete]
+=== Aufträge
+
+* In der Auftrags-UI konnte der Upload bei einen Bestellmerkmal von Typ *Datei* nicht geöffnet werden. Es ist dabei immer zu einen Access-Denied Fehler gekommen. Diese wurde nun behoben.
+* Beim Finanzbuchhaltungs-Export hat die Einstellung *Markiere exportierte Datensätze* nicht korrekt funktioniert, da ein nicht exportierter Auftrag als exportiert markiert wurde.
++
+Wurden nach dem Export neue Dokumente erstellt, wurden diese nicht im Export angezeigt, wenn die Option *Nur markierte Aufträge exportieren* aktiviert war. Dieses Verhalten wurde behoben und nun wird jedes exportierte Dokument markiert. Diese Änderung greift nur für Dokumente, die nach dieser Änderung erstellt wurden.
+
+[discrete]
+=== CRM
+
+* Beim Versuch, das SEPA-Lastschriftmandat als Anhang in einer E-Mail-Vorlage zu versenden, ist es in manchen Systemen zu einem Fehler gekommen. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Ereignisaktionen
+
+* Wenn in einer Ereignisaktion eingestellt ist, dass die E-Mail-Vorlage an die Lieferadresse gesendet werden soll, dort aber keine E-Mail-Adresse gespeichert ist, wird als Fallback die E-Mail-Adresse, die am Kontakt gespeichert ist, gesendet. Dieser Fallback hat nicht auf allen Systemen funktioniert. Dieses Verhalten wurde behoben; der Fallback auf die E-Mail-Adresse am Kontakt funktioniert wieder.
 
 --
 
@@ -117,9 +184,49 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/axytosinvoice_54780[axytos Rechnungskauf 3.0^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/backmarket_6485[Backmarket^]
+|1.3.2
+|-
+
+|link:https://marketplace.plentymarkets.com/dhlshippingstates_55231[DHL Versandstatus Tracking^]
+|1.0.1
+|-
+
+|link:https://marketplace.plentymarkets.com/glsshippingstates_55045[GLS Versandstatus Tracking^]
+|1.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/etsy_4689[Etsy^]
+|2.1.32
+|-
+
+|link:https://marketplace.plentymarkets.com/fahrsicherung_55252[FahrSicherung^]
+|1.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/findologic_6390[Findologic - Product Discovery Platform^]
+|3.9.5
+|-
+
+|link:https://marketplace.plentymarkets.com/multicontentwidget_6082[Multicontent Toolbox^]
+|4.7.19
+|-
+
+|link:https://marketplace.plentymarkets.com/mytoys_54776[MyToys^]
+|1.0.39
+|-
+
+|link:https://marketplace.plentymarkets.com/paypal_4690[PayPal Checkout^]
+|6.0.16
+|-
+
+|link:https://marketplace.plentymarkets.com/shopify_4944[Shopify.com^]
+|2.1.12
+|Händler:innen, die einen plentymarkets Artikel für Shopify Gutscheine erstellt haben und diesen Artikel über die SKU abgleichen, müssen diesen Artikel mit einem Mehrwertsteuersatz von 0% speichern. Sonst wird beim Import von Shopify-Bestellungen automatisch die Mehrwertsteuer auf den Gutschein angewendet.
 
 |===
 
