FIX a few broken links and minor issues

--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -339,7 +339,7 @@ Die Suchergebnisse liefern nur Produkte, deren physischer Bestand größer oder 
 
 xref:artikel:verzeichnis.adoc#30[Weitere Informationen zum physischen Bestand eines Produkts].
 
-| *Hat Lagereinstellung*
+| *Lager*
 |
 Wähle ein oder mehrere Lager aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
 Die Suchergebnisse liefern nur Produkte, die xref:artikel:verzeichnis.adoc#310[mit einem dieser Lager verknüpft] sind.
