--- a/docs/en-gb/modules/item/pages/barcodes.adoc
+++ b/docs/en-gb/modules/item/pages/barcodes.adoc
@@ -434,7 +434,7 @@ Unit price
 
 |Storage location
 |
-. Enter X-Y coordinates to display the xref:stock-management:new-incoming-items.adoc#200[variation’s suggested storage location] on the label. +
+. Enter X-Y coordinates to display the xref:stock-management:variations-track-stock.adoc#300[variation’s suggested storage location] on the label. +
 . xref:item:barcodes.adoc#980[Configure the appearance].
 
 |Stock; +
