--- a/docs/en-gb/modules/item/pages/item-search.adoc
+++ b/docs/en-gb/modules/item/pages/item-search.adoc
@@ -334,7 +334,7 @@ The search results only return products whose physical stock is greater than or 
 
 //xref:item:directory.adoc#30[Further information about a product's physical stock].
 
-| *Has warehouse settings*
+| *Warehouse*
 |
 Select one or more warehouses from the drop-down list (icon:check-square[role="blue"]).
 The search results only return products that are linked to one of these warehouses.
