--- a/docs/en-gb/modules/item/pages/group-functions.adoc
+++ b/docs/en-gb/modules/item/pages/group-functions.adoc
@@ -208,7 +208,7 @@ In other words, you can work on inactive variations without your customers notic
 xref:item:checklist-items-visibility.adoc#[Complete checklist for visibility].
 
 | *Always invisible in item list*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » List automatic visibility » Always invisible in item list].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » List automatic visibility » Always invisible in item list].
 
 | *Clients (stores)*
 |Which plentyShops do you want to sell the selected variations in?
@@ -218,30 +218,30 @@ icon:toggle-on[role="blue"] = Activates the client for the selected variations. 
 icon:toggle-off[role="darkGrey"] = Deactivates the client for the selected variations.
 
 | *Deliverable if net stock is positive*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » Client automatic availability » Deliverable if net stock is positive].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » Client automatic availability » Deliverable if net stock is positive].
 
 | *Displayed delivery time*
 |How long is the variation’s delivery time?
 Select the appropriate availability level from the drop-down list.
 
 | *Make available for client despite negative net stock*
-|Corresponds to the button *Temporarily make available* in the menu xref:item:directory.adoc#290[Item » Item UI » [Open variation] » Element: Client (Store)].
+|Corresponds to the button *Temporarily make available* in the menu xref:item:directory.adoc#290[Item » Item UI » [Open variation\] » Element: Client (Store)].
 
 *_Background info_*: plentymarkets can automatically remove variations from the plentyShop if they are no longer in stock.
-This automatic function is controlled by the settings in the menu xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility].
+This automatic function is controlled by the settings in the menu xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility].
 
 Use this group function if you want to manually make the variation visible in the plentyShop despite the fact that it’s not in stock.
 
 This setting remains valid until new stock is booked for the variation. Once net stock for the variation becomes positive, the availability and visibility settings if net stock is 0 or negative take effect again.
 
 | *Not deliverable if net stock is negative*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » Client automatic availability » Not deliverable if net stock is negative].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » Client automatic availability » Not deliverable if net stock is negative].
 
 | *Not visible if net stock is negative*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » Client automatic visibility » Not visible if net stock is negative].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » Client automatic visibility » Not visible if net stock is negative].
 
 | *Not visible in item list if net stock is negative*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » List automatic visibility » Not visible in item list if net stock is negative].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » List automatic visibility » Not visible in item list if net stock is negative].
 
 | *Sales channels*
 |Which marketplaces do you want to sell the variation on?
@@ -288,10 +288,10 @@ Check how your target marketplaces will interpret the stock limitation setting b
 !===
 
 | *Visible if net stock is positive*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » Client automatic visibility » Visible if net stock is positive].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » Client automatic visibility » Visible if net stock is positive].
 
 | *Visible in item list if net stock is positive*
-|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation] » Element: Availability and visibility » List automatic visibility » Visible in item list if net stock is positive].
+|Corresponds to the option xref:item:directory.adoc#220[Item » Item UI » [Open variation\] » Element: Availability and visibility » List automatic visibility » Visible in item list if net stock is positive].
 
 2+^| *Bundle settings*
 
