add info on default key figures DE

--- a/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
@@ -15,6 +15,12 @@ So kannst du entweder den Brutto-Umsatz oder den Netto-Umsatz anzeigen lassen.
 Wähle zusätzlich eine xref:business-entscheidungen:umsatz.adoc#200[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:umsatz.adoc#300[Filter] um zu konkretisieren, nach welchen Kriterien der Umsatz berechnet werden soll.
 
+[IMPORTANT]
+.Standard-Kennzahl nutzen
+====
+Die Kennzahl *Umsatz* ist eine so genannte Standard-Kennzahl. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet ist. Dir stehen zwei verschiedene, kostenfreie Konfigurationen zur Verfügung. Du musst also nicht zwingend eine zusätzliche Kennzahl erstellen. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die Kennzahl *Umsatz*, die von `plentymarkets` erstellt wurde. Passe bei Bedarf die voreingestellten Optionen an und ergänze die gewünschten <<#200, Filter>>.
+====
+
 ////
 
 [#400]
