--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -13,6 +13,12 @@ Wähle zusätzlich eine xref:business-entscheidungen:auftraege.adoc#100[Dimensio
 Setze außerdem xref:business-entscheidungen:auftraege.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die Aufträge berechnet werden sollen.
 Beachte, dass die Aufträge gezählt werden, die du im Filter *Auftragstyp* definierst. Setzt du diesen Filter nicht, werden alle Auftragstypen genommen.
 
+[IMPORTANT]
+.Standard-Kennzahl nutzen
+====
+Die Kennzahl *Aufträge* ist eine so genannte Standard-Kennzahl. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet ist.  Du musst also nicht zwingend eine zusätzliche Kennzahl erstellen. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die Kennzahl *Aufträge*, die von `plentymarkets` erstellt wurde. Passe bei Bedarf die voreingestellten Optionen an und ergänze die gewünschten <<#200, Filter>>.
+====
+
 ////
 
 [#300]
