--- a/docs/de-de/modules/business-entscheidungen/pages/live-auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/live-auftraege.adoc
@@ -13,6 +13,12 @@ Wähle zusätzlich eine xref:business-entscheidungen:auftraege-live.adoc#200[Dim
 Setze außerdem xref:business-entscheidungen:auftraege-live.adoc#300[Filter] um zu konkretisieren, nach welchen Kriterien die Aufträge berechnet und dargestellt werden sollen.
 Beachte, dass die Aufträge gezählt werden, die du im Filter *Auftragstyp* definierst. Setzt du diesen Filter nicht, werden alle Auftragstypen genommen.
 
+[IMPORTANT]
+.Standard-Kennzahl nutzen
+====
+Die Kennzahl *Aufträge (Live)* ist eine so genannte Standard-Kennzahl. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet ist. Du musst also nicht zwingend eine zusätzliche Kennzahl erstellen. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die Kennzahl *Aufträge (Live)*, die von `plentymarkets` erstellt wurde. Passe bei Bedarf die voreingestellten Optionen an und ergänze die gewünschten <<#300, Filter>>.
+====
+
 [#400]
 == plentyBI Edition
 
