--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -21,20 +21,20 @@ Bevor du deine individuelle Dashboard-Ansicht einrichten kannst, sind nur ein pa
 
 Damit Daten im Dashboard angezeigt werden können, musst du zuerst entsprechende Kennzahlen anlegen.
 
-Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Klicke auf *Vertrag bearbeiten* und gehe zum Schritt *plentyBI Edition wählen*. Hier stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
-
-[TIP]
-.Standard-Kennzahlen verfügbar
-====
-Die Kennzahlen xref:business-entscheidungen:auftraege.adoc#[Aufträge], xref:business-entscheidungen:live-auftraege.adoc#[Aufträge (Live)] und xref:business-entscheidungen:umsatz.adoc#[Umsatz] sind so genannte Standard-Kennzahlen. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet sind. So kannst du schneller mit der Einrichtung starten. Die Nutzung dieser Kennzahlen ist für dich kostenlos. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die gewünschte Kennzahl, um die vorhandenen Einstellungen nach deinen Bedürfnissen anzupassen. Danach kannst du direkt damit beginnen, diese Kennzahlen <<#410, auf deinem Dashboard einzubinden>>.
-====
-
 Kennzahlen erlauben dir, verschiedene Datensätze zusammenzustellen. Kennzahlen liefern somit die Basis für die Werte und Daten, die du später auf dem Dashboard anzeigen und nachverfolgen kannst. Pro Kennzahl werden von deinem plentymarkets System sogenannte Dimensionen bereitgestellt. Dimensionen bestimmen, nach welchen Kriterien die Daten der Kennzahl gruppiert werden.
 So kannst du pro Kennzahl genau eingrenzen, wie die Daten pro Kennzahl berechnet werden sollen.
 
 Kennzahlen legst du entweder im Menü *Einrichtung » plentyBI » Kennzahlen* oder direkt aus dem Dashboard heraus an. Im Folgenden werden beide Vorgehensweisen erklärt.
 
 Falls Benutzer:innen ohne Admin-Zugang zu deinem plentymarkets System Kennzahlen anlegen sollen, vergib zuerst die <<#300, notwendigen Benutzerrechte>>.
+
+*_Beachte_*, dass manche Kennzahlen nur angelegt werden können, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Klicke auf *Vertrag bearbeiten* und gehe zum Schritt *plentyBI Edition wählen*. Hier stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
+
+[TIP]
+.Standard-Kennzahlen verfügbar
+====
+Die Kennzahlen xref:business-entscheidungen:auftraege.adoc#[Aufträge], xref:business-entscheidungen:live-auftraege.adoc#[Aufträge (Live)] und xref:business-entscheidungen:umsatz.adoc#[Umsatz] sind so genannte Standard-Kennzahlen. Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Voreinstellungen eingerichtet sind. So kannst du schneller mit der Einrichtung starten. Die Nutzung dieser Kennzahlen ist für dich kostenlos. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen* und klicke auf die gewünschte Kennzahl, um die vorhandenen Einstellungen nach deinen Bedürfnissen anzupassen. Danach kannst du direkt damit beginnen, diese Kennzahlen <<#410, auf deinem Dashboard einzubinden>>.
+====
 
 [tabs]
 ====
