--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -19,12 +19,6 @@ Only a few preparatory steps are necessary before you can set up your individual
 [#200]
 === Creating key figures
 
-[IMPORTANT]
-.Key figures available according to plentyBI edition
-====
-Some key figures can only be used if you have booked the corresponding plentyBI edition. Go to *plentymarkets logo (Start) » My account » Contracts*. Click on *Edit contract* and go to the step *Choose plentyBI edition*. Here, you can choose between plentyBI editions with various scopes. In addition, more precise information on the required plentyBI edition is displayed for each key figure when you set it up in the *Setup » plentyBI » Key figures* menu.
-====
-
 To display data on your dashboard, you need to create the corresponding key figures first.
 
 Key figures essentially allow you to create different data sets. This way, key figures are a basis for the values and data that you can then display and track on your dashboard. Your plentymarkets system provides so-called dimensions for each key figure. Dimensions determine the criteria that are used to group the data included in the key figure.
@@ -32,10 +26,14 @@ This way, you can precisely define the conditions for the calculation of each ke
 
 You can either create key figures in the *Setup » plentyBI » Key figures* menu or directly from the dashboard. Both methods are described below.
 
-[NOTE]
-.Pay attention to user rights
-====
 If users without admin access to your plentymarkets system should be allowed to create key figures, assign the <<#300, necessary user rights>> first.
+
+*_Note_* that some key figures can only be used if you have booked the corresponding plentyBI edition. Go to *plentymarkets logo (Start) » My account » Contracts*. Click on *Edit contract* and go to the step *Choose plentyBI edition*. Here, you can choose between plentyBI editions with various scopes. In addition, more precise information on the required plentyBI edition is displayed for each key figure when you set it up in the *Setup » plentyBI » Key figures* menu.
+
+[TIP]
+.Default key figures available
+====
+The key figures xref:business-decisions:orders.adoc#[Orders], xref:business-decisions:live-orders.adoc#[Orders (Live)] and xref:business-decisions:revenue.adoc#[Revenue] are so-called default key figures. This means that they are already set up in your system with some preparatory settings. This way, you can get on with the setup much quicker. You can use these key figures free of charge. Go to *Setup » plentyBI » Key figures* and click on the desired key figure to adjust the predefined settings according to your needs. Afterwards, you can start with integrating these key figures <<#410, on your dashboard>>.
 ====
 
 [tabs]
@@ -338,7 +336,7 @@ include::partial$new-dashboard-element.adoc[]
 
 | *Conditional colouring*
 a| Do you want to display the tile in a particular colour? Select the option *Display* and click on (material:settings[]). A settings window opens. On the left, select the colour for the tile. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
+*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the `terra` component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link `/order/order-search`. +
@@ -387,7 +385,7 @@ Viewing or exporting tile data:
 
 | *Export to Google Sheets*
 | Use this option to export the tile data to a Google sheet. +
-*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. Enter a *Target cell* to determine the cell of the table that will be the starting point of the data export to the sheet. After this step, you will be asked to sign in with a Google account so that the export can be started. +
+*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. In addition, enter a *target cell* to determine the starting point for the data export to the sheet. After this step, you will be asked to sign in with a Google account before the export is started. +
 *_Example:_* By entering `A1`, the export will start from the top left corner of the Google sheet.
 
 |====
@@ -595,7 +593,7 @@ Viewing and exporting table data:
 
 | *Export to Google Sheets*
 | Use this option to export the table data to a Google sheet. +
-*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. Enter a *Target cell* to determine the cell of the table that will be the starting point of the data export to the sheet. After this step, you will be asked to sign in with a Google account so that the export can be started. +
+*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. In addition, enter a *target cell* to determine the starting point for the data export to the sheet. After this step, you will be asked to sign in with a Google account before the export is started. +
 *_Example:_* By entering `A1`, the export will start from the top left corner of the Google sheet.
 |====
 
@@ -682,7 +680,7 @@ Viewing and exporting combined table data:
 
 | *Export to Google Sheets*
 | Use this option to export the table data to a Google sheet. +
-*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. Enter a *Target cell* to determine the cell of the table that will be the starting point of the data export to the sheet. After this step, you will be asked to sign in with a Google account so that the export can be started. +
+*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. In addition, enter a *target cell* to determine the starting point for the data export to the sheet. After this step, you will be asked to sign in with a Google account before the export is started. +
 *_Example:_* By entering `A1`, the export will start from the top left corner of the Google sheet.
 |====
 
@@ -1115,7 +1113,7 @@ Viewing and exporting graph data:
 | *Save data*
 | Downloads the currently displayed data of the graph. Select one of the options *CSV* or *JSON* to determine the file format. +
 Use the *Export to Google Sheets* option to export the data of the graph to a Google sheet. +
-*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. Enter a *Target cell* to determine the cell of the table that will be the starting point of the data export to the sheet. After this step, you will be asked to sign in with a Google account so that the export can be started. +
+*_Important:_* To use this function, you need to have a Google account and create an empty sheet in the link:https://www.google.com/sheets/about/[Google Sheets tool^] beforehand. After clicking on the *Export to Google Sheets* option, select the contents of the dashboard that should be exported. In the next step, enter the URL of the Google sheet. In addition, enter a *target cell* to determine the starting point for the data export to the sheet. After this step, you will be asked to sign in with a Google account before the export is started. +
 *_Example:_* By entering `A1`, the export will start from the top left corner of the Google sheet.
 
 | *Change filter*
@@ -1375,7 +1373,7 @@ Exporting data to Google Sheets:
 [#900]
 === Displaying notifications
 
-xref:welcome:login-tour.adoc#notification-center[Notifications] alert you to important information on your plentymarkets system. You can access these notifications by clicking on the bell symbol at the top margin of the plentymarkets back end. By clicking on the bell symbol, all current notifications are displayed. In addition, an area for notifications is displayed by default when opening a dashboard view for the first time or when creating a new dashboard view. Proceed as described below in case you have deleted this area and want to display it again.
+xref:welcome/:ogin-tour.adoc#notification-centre[Notifications] alert you to important information on your plentymarkets system. You can access these notifications by clicking on the bell symbol at the top margin of the plentymarkets back end. By clicking on the bell symbol, all current notifications are displayed. In addition, an area for notifications is displayed by default when opening a dashboard view for the first time or when creating a new dashboard view. Proceed as described below in case you have deleted this area and want to display it again.
 
 [.instruction]
 Displaying notifications on the dashboard:
