--- a/docs/de-de/modules/_includes/pages/crons.adoc
+++ b/docs/de-de/modules/_includes/pages/crons.adoc
@@ -5,9 +5,9 @@ Ein Cron dient der zeitbasierten Ausführung von Prozessen. Diese Ausführung er
 
 Cronjobs sind wiederkehrende Aufgaben (Jobs), die automatisch in festen Intervallen ausgeführt werden. Diese Intervalle werden normalerweise in Minuten angegeben. Ein Cron 60 wird zum Beispiel alle 60 Minuten ausgeführt.
 
-*_Beispiel:_* Bilder werden alle 60 Minuten von SPoCC in plentymarkets importiert. Jeder dieser Importe ist ein Cronjob.
+*_Beispiel:_* Artikeldaten werden einmal täglich zu einem Marktplatz exportiert. Dabei kommt ein "Cron 1440" zum Einsatz. Jeder Export ist ein Cronjob.
 
-Fun Fact: Cron steht für Command Run On Notice, spielt aber auch auf Chronos an, den altgriechischen Gott der Zeit.
+Fun Fact: Cron steht für "Command Run On Notice". Der Begriff spielt aber auch auf Chronos an, den griechischen Gott der Zeit.
 
-Warum du wissen musst, was ein Cron ist? Eigentlich musst du das gar nicht wissen. Du aktivierst nur den Austausch von Daten in plentymarkets. Die Intervalle sind fest hinterlegt und werden automatisch ausgeführt.
+Warum du wissen musst, was ein Cron ist? Eigentlich musst du das gar nicht wissen. Du aktivierst nur den Austausch von Daten in plentymarkets. Der Rest passiert automatisch. Cool, oder?
 --
