--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -660,6 +660,8 @@ Bei Bedarf müsstest du dann manuell Artikel in andere plentymarkets Kategorien 
 Der Datenaustausch zwischen Prohandel und plentymarkets erfolgt mit Hilfe von so genannten "Crons".
 In diesem Schritt aktivierst du die Cron-Jobs, die automatisch ausgeführt werden sollen (icon:check-square[role="blue"]).
 
+include::_includes:page$crons.adoc[]
+
 [[table-cron-settings]]
 .Wann werden die Crons ausgeführt?
 [cols="1,1,3a"]
