--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -72,11 +72,13 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 | Wie wurde der Export gestartet?
 
 * *Benutzer:in* = Der Exportvorgang wurde von einer Benutzer:in gestartet. Wenn du mit der Maus auf den Namen der Person zeigst, wird auch die ID der Benutzer:in angezeigt.
-* *Cron* = Der Exportvorgang wurde automatisch durch einen Cron gestartet. Wenn du mit der Maus auf das Wort "Cron"zeigst, wird angezeigt, welcher Cron den Export gestartet hat. +
+* *Cron* = Der Exportvorgang wurde automatisch durch einen Cron gestartet. Wenn du mit der Maus auf das Wort "Cron" zeigst, wird angezeigt, welcher Cron den Export gestartet hat. +
   ** *20* = Export läuft alle 20 Minuten. +
   ** *60* = Export läuft einmal pro Stunde. +
   ** *1440* = Export läuft einmal pro Tag.
 * *Debug* = Der Exportvorgang wurde zum Debuggen gestartet.
+
+include::_includes:page$crons.adoc[]
 
 | *Startzeit*
 | Wann wurde der Exportvorgang gestartet?
