--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -110,12 +110,18 @@ include::partial$assistant-basic-instructions.adoc[]
 | *Order import cron*
 | Activate to activate the order import. Orders are imported every 15 minutes.
 
+include::_includes:page$crons.adoc[]
+
 | *Product export cron*
 | Activate to activate the item export. +
 *_Note:_* Item data is exported once or twice a day. The export also triggers the price update for the variations included.
 
+include::_includes:page$crons.adoc[]
+
 | *Stock export cron*
 | Activate to activate the stock export. Stock is exported every 15 minutes.
+
+include::_includes:page$crons.adoc[]
 
 2+^| Step *Shipping profile matching*
 
