--- a/docs/de-de/modules/maerkte/pages/best-practices-ebay-faq.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-ebay-faq.adoc
@@ -123,7 +123,9 @@ Vergleiche die Attribute und Attributwerte auf eBay mit denen in plentymarkets. 
 [#720]
 === Fehlende Übereinstimmung bei den Variantenmerkmalen. Die eingegebenen Variantenmerkmale stimmen nicht mit den Variantenmerkmalen des Artikels überein.
 
-Diese Fehlermeldung kann entweder beim automatischen Relisten durch den CronJob ausgegeben werden oder wenn du die Option *Beenden und neu starten* wählst. +
+Diese Fehlermeldung kann entweder beim automatischen Relisten durch den CronJob ausgegeben werden oder wenn du die Option *Beenden und neu starten* wählst.
+
+include::_includes:page$crons.adoc[]
 
 Wenn eine dieser Optionen zutrifft, ist es theoretisch möglich, das Ranking des alten Listings zu erhalten und auf das neue Listing zu übertragen. +
 Aber auch hier erwartet eBay, dass sich die bereits verkauften Varianten im beendeten Listing *nicht verändern*. +
