--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -155,12 +155,6 @@ Klicke auf einen Export, um Details zum Exportvorgang anzuzeigen.
 |===
 |Einstellung |Erläuterung
 
-| *Details*
-| Hier werden die Details zum Export noch einmal aufgelistet. Die Informationen werden automatisch alle 20 Sekunden aktualisiert.
-
-| *Fehler*
-| Eine Liste der Fehler. Diese Informationen werden nicht automatisch aktualisiert. Klicke auf material:refresh[], um die Informationen manuell zu aktualisieren.
-
 | *Fortschritt-Logs* +
 (material:playlist_play[])
 | Klicken, um die Logs anzuzeigen.
@@ -175,4 +169,9 @@ Links wird die Liste der Logs angezeigt. Klicke auf eines dieser Logs, um Inform
 | Klicken, um die Daten anzuzeigen, die exportiert wurden. Die Daten werden im JSON-Format angezeigt. +
 *_Wichtig:_* Aufgrund der Datenmenge und -komplexität können die Daten nicht als Tabelle angezeigt werden.
 
+| *Details*
+| Hier werden die Details zum Export noch einmal aufgelistet. Die Informationen werden automatisch alle 20 Sekunden aktualisiert.
+
+| *Fehler*
+| Eine Liste der Fehler. Diese Informationen werden nicht automatisch aktualisiert. Klicke deshalb auf material:refresh[], um die Informationen manuell zu aktualisieren.
 |===
