--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -38,7 +38,7 @@ You are in the menu *Data » Catalogue export status*. When you open the menu, a
 | *Template*
 | The template
 
-| *State*
+| *Condition*
 | * *Started* = The export has started.
 * *In queue* = The export has been enqueued.
 * *Processed* = The export has been processed.
@@ -72,11 +72,13 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 | How was the export started?
 
 * *User* = The export was started by a user. Point your mouse at the name of the user to also show the user ID.
-* *Cron* = The export was automatically started by a cron. Point your mouse at the "cron" text to show which cron started the export. +
+* *Cron* = The export was automatically started by a cron. Point your mouse at the word "cron" to show which cron started the export. +
   ** *20* = Export runs every 20 minutes. +
   ** *60* = Export runs once per hour. +
   ** *1440* = Export runs once daily.
 * *Debug* = The export has started for debugging purposes.
+
+include::_includes:page$crons.adoc[]
 
 | *Start time*
 | When was the export started?
@@ -112,7 +114,7 @@ include::page$catalogues-status.adoc[tag=export-types]
 | *Catalogue ID*
 | Reduces the list to the catalogue with this ID.
 
-| *State*
+| *Condition*
 | Reduces the list to catalogues in this state. 
 
 | *Initiator*
@@ -160,7 +162,7 @@ The list of logs is shown on the left. Click on one of the logs to show more det
 
 | *Performance logs* +
 (material:bar_chart[])
-| This setting is currently without function. Stay tuned.
+| This setting is still without function. Stay tuned.
 
 | *Data* +
 (material:library_books[]) +
@@ -168,9 +170,20 @@ The list of logs is shown on the left. Click on one of the logs to show more det
 | Click to show the data that was exported. The data is shown in JSON format. +
 *_Important:_* Due to the data volume and complexity, the data cannot be shown as a table.
 
+| *Download export* +
+(material:file_download[])
+|
+. Click on *Download export* (material:file_download[]). +
+→ The export starts. +
+*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
+Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+. In the notification centre, click on material:link[] *Download*. +
+*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
+. Save the file on your computer.
+
 | *Details*
 | This lists detailed information about the export. This information is updated automatically every 20 seconds.
 
 | *Error*
-| A list of errors. This information is not updated automatically. Click on material:refresh[] to manually update the information.
+| A list of errors. This information is not updated automatically. So click on material:refresh[] to manually update the information if necessary.
 |===
