Restore catalogues: last 100 versions only - DE+EN

--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -177,7 +177,8 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 ! Kopiere den Katalog.
 
 ! material:history[] *Katalog-Version wiederherstellen*
-! Stelle eine frühere Version des Katalogs wieder her.
+! Stelle eine frühere Version des Katalogs wieder her. Die letzten 100 Versionen des Katalogs sind verfügbar.
+
 
 ! material:delete[] *Löschen*
 ! Lösche den Katalog.
