--- a/docs/en-gb/modules/data/partials/catalogue-overview.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-overview.adoc
@@ -177,7 +177,7 @@ material:toggle_on[] = The catalogue is active. That means that data is exported
 ! Copy the catalogue.
 
 ! material:history[] *Restore catalogue version*
-! Restore an earlier version of the catalogue.
+! Restore an earlier version of the catalogue. The last 100 versions of a catalogue are available.
 
 ! material:delete[] *Delete*
 ! Delete the catalogue.
