--- a/docs/en-gb/modules/data/partials/catalogues-manage.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-manage.adoc
@@ -122,7 +122,7 @@ Deleting several catalogues:
 [#250]
 == Restoring another catalogue version
 
-You can restore a previous catalogue version via the further actions or in the view of a catalogue.
+You can restore a previous catalogue version via the further actions or in the view of a catalogue. The last 100 versions of a catalogue are available.
 
 [.instruction]
 Restoring a catalogue version:
@@ -136,7 +136,8 @@ Restoring a catalogue version:
   .. Open the catalogue.
   .. In the toolbar, click on the additional actions (icon:ellipsis-v[]).
   .. Click on *Restore catalogue version* (material:history[]).
-. In the window shown, select the version that you want to restore.
+. In the window shown, select the version that you want to restore. +
+*_Tip:_* The last 100 versions of a catalogue are available.
 . Click on *Restore*. +
 → The catalogue version is restored and displayed in the catalogue overview.
 
