--- a/docs/en-gb/modules/data/partials/catalogue-menu.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-menu.adoc
@@ -123,7 +123,7 @@ endif::marketplace-export[]
 ifdef::marketplace-export[]
 * icon:toggle-off[role="darkGrey"] = Show or hide optional marketplace data fields.
 endif::marketplace-export[]
-* material:history[] = Restores an earlier version of the catalogue.
+* material:history[] = Restores an earlier version of the catalogue. The last 100 versions of a catalogue are available.
 * material:delete[] = Deletes the catalogue.
 |===
 
