add practical example link to faq page

--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -94,6 +94,16 @@ Möglicherweise befindest du dich im falschen Menü. Das Anonymisieren von Konta
 Weitere Informationen zum Anonymisieren von Kontaktdaten findest du in der Box <<#faq-kundendaten-loeschen, Wie lösche ich Kontaktdaten DSGVO-konform?>> und auf der Handbuchseite xref:crm:schnellsuche.adoc#datensatz-anonymisieren[Schnellsuche].
 --
 
-// == E-Mail-Vorlagen
+[#e-mail-vorlagen]
+== E-Mail-Vorlagen
+ 
+[#faq-praxisbeispiel-tracking-url]
+[.collapseBox]
+.Wie kann ich eine E-Mail-Vorlage mit der Tracking-URL senden, sobald die Paketnummer am Auftrag verfügbar ist?
+--
+Du möchtest eine E-Mail-Vorlage, die die Tracking-URL (auch Sendungsverfolgung genannt) enthält, an deine Kund:innen versenden, sobald der Auftrag erfolgreich beim Versanddienstleister angemeldet und die Paketnummer am Auftrag verfügbar ist? 
+
+Dann schau dir dieses xref:crm:praxisbeispiel-tracking-url-senden.adoc#[Praxisbeispiel] an, in dem wir Schritt für Schritt erklären, welche Einstellungen du in deinem plentymarkets System vornehmen musst.
+--
 
 // == E-Mail-Versand
