--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -11,7 +11,7 @@ Ich möchte eine Tracking-URL an meine Kund:innen senden, sobald die Paketnummer
 * Tracking-URL am Versanddienstleister speichern
 * E-Mail-Vorlage im EmailBuilder einrichten
 ** Variable `Tracking-URL` in Vorlage einfügen
-* Ereignisaktion verknüpfen, die die Vorlage versendet, wenn das Paket beim Dienstleister angemeldet wurde und eine Paketnummer am Auftrag erstellt ist.
+* Ereignisaktion verknüpfen, die die Vorlage versendet, wenn der Auftrag beim Versanddienstleister angemeldet wurde und eine Paketnummer am Auftrag verfügbar ist.
 
 [#tracking-url-speichern]
 == Tracking-URL am Versanddienstleister speichern
