--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -249,7 +249,7 @@ Exporteinstellungen vornehmen:
 
 [[tabelle-exporteinstellungen-standard]]
 .Exporteinstellungen vornehmen
-[cols="1,3a"]
+[cols="1,4a"]
 |===
 |Einstellung |Erläuterung
 
@@ -269,11 +269,86 @@ Exporteinstellungen vornehmen:
 ! *FTP*
 ! Der Export wird auf einem FTP-Server gespeichert.
 
-! *SFTP*
-! Der Export wird auf einem SFTP-Server gespeichert.
+[.collapseBox]
+.Bereitstellung einrichten
+--
+. Wähle die Option *FTP*. +
+→ Weitere Einstellungen werden eingeblendet.
+. Gib den *Server* ein, auf dem der Export gespeichert werden soll. +
+*_Empfehlung:_* Gib kein Protokoll-Präfix an.
+Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
+. Gib einen *Port* ein oder verwende die Standardeinstellung. +
+*_Empfehlung:_* Verwende den Port `21`.
+. Gib den *Benutzernamen* für den Server ein.
+. Gib das *Passwort* für den Server ein.
+. Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll.
+. Klicke auf *Verbindung testen* +
+→ Die Servereinstellungen werden geprüft:
+  * Kann eine Verbindung zu dem Server hergestellt werden?
+  * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
+  *_Tipp:_* Unter dem angegebenen Pfad wird eine Testdatei gespeichert. Diese Testdatei heißt `plentymarkets_ConnectionTestFile.txt`.
+--
 
 ! *FTPS*
 ! Der Export wird auf einem FTPS-Server gespeichert.
+
+[.collapseBox]
+.Bereitstellung einrichten
+--
+. Wähle die Option *FTPS*. +
+→ Weitere Einstellungen werden eingeblendet.
+. Gib den *Server* ein, auf dem der Export gespeichert werden soll. +
+*_Empfehlung:_* Gib kein Protokoll-Präfix an.
+Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
+. Gib einen *Port* ein oder verwende die Standardeinstellung. +
+*_Empfehlung:_* Verwende den Port `21`.
+. Gib den *Benutzernamen* für den Server ein.
+. Gib das *Passwort* für den Server ein.
+. Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll.
+. Klicke auf *Verbindung testen* +
+→ Die Servereinstellungen werden geprüft:
+  * Kann eine Verbindung zu dem Server hergestellt werden?
+  * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
+  *_Tipp:_* Unter dem angegebenen Pfad wird eine Testdatei gespeichert. Diese Testdatei heißt `plentymarkets_ConnectionTestFile.txt`.
+--
+
+! *SFTP*
+! Der Export wird auf einem SFTP-Server gespeichert.
+
+[.collapseBox]
+.Bereitstellung einrichten
+--
+
+. Wähle die Option *FTPS*. +
+→ Weitere Einstellungen werden eingeblendet.
+. Gib den *Server* ein, auf dem der Export gespeichert werden soll. +
+*_Empfehlung:_* Gib kein Protokoll-Präfix an.
+Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
+. Gib einen *Port* ein oder verwende die Standardeinstellung. +
+*_Empfehlung:_* Verwende den Port `22`.
+. Gib den *Benutzernamen* für den Server ein.
+. Gib das *Passwort* für den Server ein.
+. Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll. +
+*_Hinweis:_* Gib den vollständigen Pfad ein.
+. Klicke auf *Verbindung testen* +
+→ Die Servereinstellungen werden geprüft:
+  * Kann eine Verbindung zu dem Server hergestellt werden?
+  * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
+  *_Tipp:_* Unter dem angegebenen Pfad wird eine Testdatei gespeichert. Diese Testdatei heißt `plentymarkets_ConnectionTestFile.txt`.
+--
+
+! *Google Sheets*
+! Der Export wird in Google Sheets gespeichert.
+
+[.collapseBox]
+.Bereitstellung einrichten
+--
+. Wähle die Option *Google Sheets*. +
+→ Die Einstellung *Tabellen-URL* wird eingeblendet.
+. Gib die URL der Google Sheets-Datei ein.
+. Klicke auf *Connect with Google*. +
+→ Die Verbindung wird hergestellt.
+--
 
 ! *Admin-Bereich* +
 (coming soon)
@@ -316,7 +391,15 @@ Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
 * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
 *_Tipp:_* Unter dem angegebenen Pfad wird eine Testdatei gespeichert. Diese Testdatei heißt `plentymarkets_ConnectionTestFile.txt`.
 
-ifdef::marketplace-export[*_Hinweis:_* Getestet wird nur, ob mit den aktuellen Exporteinstellungen ein Dateiexport möglich ist. Die Option prüft _nicht_, ob eine Verbindung zu einem Marktplatz hergestellt werden kann.]
+ifdef::marketplace-export[*_Hinweis:_* Getestet wird nur, ob mit den aktuellen Exporteinstellungen ein Dateiexport möglich ist. Die Option prüft _nicht_, ob Verbindung zu einem Marktplatz hergestellt werden kann.]
+
+| Tabellen-URL +
+(bei Google Sheets)
+|
+
+. Gib die URL der Google Sheets-Datei ein, in der der Export gespeichert werden soll.
+. Klicke auf *Connect with Google*. +
+→ Die Verbindung wird hergestellt.
 
 | *Übertragung*
 | Wann soll ein Export gestartet werden?
