fix: include path

--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -659,7 +659,7 @@ Bei Bedarf musst du dann manuell Artikel in andere plentymarkets Kategorien vers
 
 Der Datenaustausch zwischen Prohandel und plentymarkets erfolgt mit Hilfe von sogenannten Crons.
 
-include::_includes:partial$crons.adoc[]
+include::_includes:page$crons.adoc[]
 
 In diesem Schritt aktivierst du die Cron-Jobs, die automatisch ausgeführt werden sollen (icon:check-square[role="blue"]).
 
